--- a/sys-apps/sh-utils/ChangeLog
+++ b/sys-apps/sh-utils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/sh-utils
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/sh-utils/ChangeLog,v 1.6 2002/06/21 23:37:54 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/sh-utils/ChangeLog,v 1.7 2002/07/09 23:10:30 seemant Exp $
+
+  09 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  files/sh-utils-2.0.11-gentoo.patch :
+
+  Added one line to the Carlos E Gorges <carlos@techlinux.com.br> patch to
+  show correct output for ppc as well.
 
 *sh-utils-2.0.11-r5 (21 Jun 2002)
 
