--- a/gnome-extra/gtop/ChangeLog
+++ b/gnome-extra/gtop/ChangeLog
@@ -1,13 +1,9 @@
 # ChangeLog for gnome-extra/gtop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtop/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtop/ChangeLog,v 1.2 2002/07/09 23:17:10 blizzy Exp $
 
-*gtop-1.0.13 (1 Feb 2002)
+*gtop-1.0.13-r1 (10 Jul 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+  10 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :
+
+  Added dependency on gnome-base/gnome-libs. This closes bug #4771.
