--- a/net-www/links/ChangeLog
+++ b/net-www/links/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-www/links
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.7 2002/06/11 09:49:25 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.8 2002/07/10 00:18:15 seemant Exp $
+
+*links-2.1_pre2 (09 Jul 2002)
+
+  09 Jul 2002; Seemant Kulleen <seemant@gentoo.org> links-2.1_pre2.ebuild
+  files/digest-links-2.1_pre2 :
+
+  Version bump, which should solve the png issue. Thanks to:
+  j_r_fonseca@yahoo.co.uk (Jose' Fonseca) in bug #4764
 
 *links-2.0 (11 Jun 2002)
 
