--- a/net-libs/libfwbuilder/ChangeLog
+++ b/net-libs/libfwbuilder/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-libs/libfwbuilder
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libfwbuilder/ChangeLog,v 1.3 2002/03/30 16:57:36 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libfwbuilder/ChangeLog,v 1.4 2002/07/10 15:10:29 phoenix Exp $
+
+
+*libfwbuilder-0.10.7 (10 July 2002)
+
+  10 Jul 2002; phoen][x <phoenix@gentoo.org> libfwbuilder-0.10.7.ebuild :
+  Bumped to new version. Thanks to Artur Wanzel <t1ck@bonetmail.com>
+  for the contribution.
 
 *libfwbuilder-0.10.5 (30 Mar 2002)
 
