--- a/net-misc/fwbuilder/ChangeLog
+++ b/net-misc/fwbuilder/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/fwbuilder
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/fwbuilder/ChangeLog,v 1.4 2002/07/07 06:47:50 phoenix Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/fwbuilder/ChangeLog,v 1.5 2002/07/10 15:11:39 phoenix Exp $
+
+*fwbuilder-1.0.3 (10 July 2002)
+
+  10 Jul 2002; phoen][x <phoenix@gentoo.org> fwbuilder-1.0.3.ebuild :
+  Bumped to new version. Thanks to Artur Wanzel <t1ck@bonetmail.com>
+  for the contribution.
 
 *fwbuilder-1.0.1 (30 Mar 2002)
 
