--- a/sys-apps/reiserfsprogs/ChangeLog
+++ b/sys-apps/reiserfsprogs/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/reiserfsprogs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/reiserfsprogs/ChangeLog,v 1.1 2002/05/07 03:46:37 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/reiserfsprogs/ChangeLog,v 1.2 2002/07/10 16:25:39 lostlogic Exp $
+
+*reiserfsprogs-3.6.2 (10 Jul 2002)
+
+  10 Jul 2002; Brandon Low <lostlogic@gentoo.org> reiserfsprogs-3.6.2.ebuild : 
+
+  Latest release HOT off the namesys presses, verified to be thelatest
+  safe release with Vitaly Fertman of Namesys, despite what the namesys
+  website says.
 
 *reiserfsprogs-3.1c (06 Mar 2002)
 
