--- a/dev-ruby/ruby-dbi/ChangeLog
+++ b/dev-ruby/ruby-dbi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ruby-dbi
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-dbi/ChangeLog,v 1.3 2002/07/08 02:43:55 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-dbi/ChangeLog,v 1.4 2002/07/10 16:55:21 rphillips Exp $
+
+*ruby-dbi-0.0.16 (10 Jul 2002)
+
+  10 Jul 2002; Ryan Phillips <rphillips@gentoo.org> ruby-dbi-0.0.15.ebuild :
+
+  New version
 
 *ruby-dbi-0.0.15 (21 Jun 2002)
 
