--- a/dev-ruby/rexml/ChangeLog
+++ b/dev-ruby/rexml/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rexml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.4 2002/07/08 02:55:59 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.5 2002/07/10 16:59:35 rphillips Exp $
+
+*rexml-2.4.0 (10 Jul 2002)
+
+  10 Jul 2002; Ryan Phillips <rphillips@gentoo.org> rexml-2.4.0 files/digest-rexml-2.4.0 :
+
+  New Version. Fixes #4796
 
 *rexml-2.3.7 (02 Jul 2002)
 
