--- a/dev-util/poedit/ChangeLog
+++ b/dev-util/poedit/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-util/poedit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/poedit/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/poedit/ChangeLog,v 1.2 2002/07/10 20:36:33 seemant Exp $
+
+*poedit-1.1.8 (10 Jul 2002)
+
+  10 Jul 2002; Seemant Kulleen <seemant@gentoo.org> poedit-1.1.8.ebuild
+  files/digest-poedit-1.1.8 files/poedit-1.1.8-gentoo.diff :
+
+  Version bump thanks to: christian-neumair@web.de (Christian - Manny
+  Calavera - Neumair) in bug #4827
 
 *poedit-1.1.5 (1 Feb 2002)
 
