--- a/sys-apps/ami/ChangeLog
+++ b/sys-apps/ami/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/ami
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/ami/ChangeLog,v 1.1 2002/07/09 20:25:59 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/ami/ChangeLog,v 1.2 2002/07/11 01:43:28 jayskwak Exp $
+
+*ami-1.0.11-r2 (11 Jul 2002)
+
+  09 Jul 2002; Jays Kwak <jayskwak@gentoo.org> ami-1.0.11-r2 :
+  remove gnome-applet option for GNOME2
 
 *ami-1.0.11-r1 (09 Jul 2002)
 
