--- a/x11-misc/baekmuk-fonts/ChangeLog
+++ b/x11-misc/baekmuk-fonts/ChangeLog
@@ -1,6 +1,11 @@
-# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
+# ChangeLog for x11-misc/baekmuk-fonts
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/baekmuk-fonts/ChangeLog,v 1.1 2002/06/25 16:01:22 stubear Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/baekmuk-fonts/ChangeLog,v 1.2 2002/07/11 02:16:30 jayskwak Exp $
+
+*baekmuk-fonts-2.0-r1 (11 Jul 2002)
+
+  11 Jul 2002; Jays Kwak <jayskwak@gentoo.org> baekmuk-fonts-2.0-r1 :
+  move TTF font path to /usr/share/fonts/ttf/korean/baekmuk for GNOME2 AA font
 
 *<PACKAGE_NAME>-<PACKAGE_VERSION>-<PACKAGE_RELEASE> (DD MMM YYYY)
 
