--- a/app-i18n/ispell-de/ChangeLog
+++ b/app-i18n/ispell-de/ChangeLog
@@ -1,10 +1,19 @@
 # ChangeLog for app-i18n/ispell-de
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/ispell-de/ChangeLog,v 1.2 2002/04/17 18:46:11 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/ispell-de/ChangeLog,v 1.3 2002/07/11 09:16:08 seemant Exp $
+
+
+*ispell-de-20011124 (11 Jul 2002)
+
+  11 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  ispell-de-20011124.ebuild :
+
+  changed the sq hacks from 17 Apr, as ispell has been patched to provide
+  these again.
 
 *ispell-de-20011124 (17 Apr 2002)
 
-  17 Apr 2002; Seemant Kulleen <seemant@gentoo.org> ispell-de-10011124.ebuild
+  17 Apr 2002; Seemant Kulleen <seemant@gentoo.org> ispell-de-20011124.ebuild
 
   Tod is soo a genius for thinking of this one.  This starts to solve our
   recent ispell problems, hopefully.
