--- a/app-i18n/aspell-de/ChangeLog
+++ b/app-i18n/aspell-de/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-i18n/aspell-de
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/aspell-de/ChangeLog,v 1.1 2002/02/01 21:53:01 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/aspell-de/ChangeLog,v 1.2 2002/07/11 13:21:52 seemant Exp $
+
+*aspell-de-20011124 (11 Jul 2002)
+
+  11 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  aspell-de-20011124.ebuild files/digest-aspell-de-20011124 :
+
+  Version bump.
 
 *aspell-de-20001109 (1 Feb 2002)
 
