--- a/gnome-extra/gtop/ChangeLog
+++ b/gnome-extra/gtop/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/gtop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtop/ChangeLog,v 1.2 2002/07/09 23:17:10 blizzy Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtop/ChangeLog,v 1.3 2002/07/11 14:47:41 stroke Exp $
+
+*gtop-1.0.13-r2 (11 Jul 2002)
+
+  11 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> gtop-1.0.13-r2.ebuild:
+
+  Updated dependencies and corrected the libgtop depence to emerge the
+  GNOME1 version instead of the GNOME2 one. Also fixes bug #4811.
 
 *gtop-1.0.13-r1 (10 Jul 2002)
 
