--- a/net-misc/tsocks/ChangeLog
+++ b/net-misc/tsocks/ChangeLog
@@ -1,8 +1,13 @@
 # ChangeLog for net-misc/tsocks
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tsocks/ChangeLog,v 1.2 2002/07/09 11:18:12 phoenix Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tsocks/ChangeLog,v 1.3 2002/07/11 16:15:44 lamer Exp $
+
+
 
 *tsocks-1.8beta4  (10 Jun 2002)
+
+  11 Jul 2002; lamer <lamer@gentoo.org> tsocks-1.8beta4.ebuild : 
+  Added "dobin validateconf saveme inspectsocks" to src_install
 
   09 Jul 2002; phoen][x <phoenix@gentoo.org> tsocks-1.8beta4.ebuild :
   Added KEYWORDS, SLOT.
