--- a/dev-lisp/gauche/ChangeLog
+++ b/dev-lisp/gauche/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-lisp/gauche
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gauche/ChangeLog,v 1.1 2002/04/13 22:05:00 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gauche/ChangeLog,v 1.2 2002/07/11 23:58:09 karltk Exp $
+
+*gauche-0.5.7 (12 Jul 2002)
+
+  12 Jul 2002; Karl Trygve Kalleberg <karltk@gentoo.org> gauche-0.5.7.ebuild files/digest-gauche-0.5.7:
+
+  New upstream version. 
+
+  Old version, gauche-0.5.2, removed.
 
 *gauche-0.5.2 (12 Apr 2002)
 
