--- a/app-text/ispell/ChangeLog
+++ b/app-text/ispell/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for app-text/ispell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/ispell/ChangeLog,v 1.5 2002/07/11 09:04:06 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ispell/ChangeLog,v 1.6 2002/07/12 01:01:11 seemant Exp $
+
+*ispell-3.2.06-r3 (11 Jul 2002)
+
+  11 Jul 2002; Seemant Kulleen <seemant@gentoo.org> ispell-3.2.06-r3.ebuild
+  files/digest-ispell-3.2.06-r3 :
+
+  Finally, all the sanbox violations are fixed (gcc-3 systems).  Much thanks
+  to Francis85 in #gentoo for the help on that.  Also, the SRC_URI has been
+  corrected thanks to adamm@san.rr.com (Adam M.) in bug #4894
 
 *ispell-3.2.06-r2 (11 Jul 2002)
 
