--- a/net-www/links/ChangeLog
+++ b/net-www/links/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/links
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.8 2002/07/10 00:18:15 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.9 2002/07/12 01:14:25 seemant Exp $
+
+  11 Jul 2002; Seemant Kulleen <seemant@gentoo.org> links-2.1_pre2-r1.ebuild
+  files/digest-links-2.1_pre2-r1 :
+
+  Adjusted permissions on executable if svga is in USE.  Thanks to:
+  hielvc@cox.net (Hiel Van Campen) in bug #4891.
 
 *links-2.1_pre2 (09 Jul 2002)
 
