--- a/sys-apps/pcmcia-cs/ChangeLog
+++ b/sys-apps/pcmcia-cs/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/pcmcia-cs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.16 2002/07/12 09:23:16 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.17 2002/07/12 10:31:23 cardoe Exp $
+
+*pcmcia-cs-3.1.35_beta2 (12 July 2002)
+
+  12 July 2002; Doug Goldstein <cardoe@gentoo.org> pcmcia-cs-3.1.35_beta2.ebuild
+  
+  Since .34 and lower have some very very annoying and dibilitating (sp) bugs in them I'm creating this..
+  It carries over my fixes from .34-r6 still as they haven't been made upstream yet
+  There is no beta1 ebuild, only beta2 as the file this ebuild uses is the 2nd beta file released
 
 *pcmcia-cs-3.1.34 (12 July 2002)
 
