--- a/net-www/squid/ChangeLog
+++ b/net-www/squid/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-www/squid
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/squid/ChangeLog,v 1.5 2002/05/04 23:23:02 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/squid/ChangeLog,v 1.6 2002/07/12 12:40:18 blocke Exp $
 
+*squid-2.4.7 (12 Jul 2002)
+
+  12 Jul 2002; Bruce A. Locke <blocke@shivan.org>:
+
+  Version bump and added KEYWORDS
+  
 *squid-2.4.6-r1 (4 May 2002)
   
   4 May 2002; Donny Davies <woodchip@gentoo.org> :
