--- a/app-text/ispell/ChangeLog
+++ b/app-text/ispell/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/ispell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/ispell/ChangeLog,v 1.6 2002/07/12 01:01:11 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ispell/ChangeLog,v 1.7 2002/07/12 15:35:01 seemant Exp $
+
+*ispell-3.2.06-r4 (12 Jul 2002)
+
+  12 Jul 2002; Seemant Kulleen <seemant@gentoo.org> ispell-3.2.06-r4.ebuild
+  files/digest-ispell-3.2.06-r4 :
+
+  Corrected erroneous path in ispell.1.gz which showed ${D}
 
 *ispell-3.2.06-r3 (11 Jul 2002)
 
