--- a/app-text/ghostscript/ChangeLog
+++ b/app-text/ghostscript/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/ghostscript
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript/ChangeLog,v 1.10 2002/07/11 06:45:55 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript/ChangeLog,v 1.11 2002/07/12 18:49:32 g2boojum Exp $
+
+*ghostscript-7.05.3-r1 (12 Jul 2002)
+
+  12 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  added HL-12XX support; thanks to Bardur Arantsson.  Really, this time.
 
 *ghostscript-7.05.3 (10 Jul 2002)
 
