--- a/app-misc/xosview/ChangeLog
+++ b/app-misc/xosview/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/xosview
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/xosview/ChangeLog,v 1.1 2002/02/01 21:53:09 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/xosview/ChangeLog,v 1.2 2002/07/12 20:20:50 g2boojum Exp $
+
+*xosview-1.8.0 (12 Jul 2002)
+
+  12 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  new version
 
 *xosview-1.7.3-r1 (1 Feb 2002)
 
