--- a/net-www/mozilla/ChangeLog
+++ b/net-www/mozilla/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-www/mozilla
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.25 2002/07/07 21:24:27 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.26 2002/07/12 20:41:36 azarah Exp $
+
+  13 Jul 2002; Martin Schlemmer <azarah@gentoo.org> mozilla.sh :
+  Update to fix a bug with gtk2 (mozilla-xremote-client are not created).
+  This cause mozilla not to run, or some wierd stuff in the browser window.
+  Should close bug #4758.
 
 *mozilla-1.0-r3 (7 Jul 2002)
 
