--- a/net-mail/sendmail/ChangeLog
+++ b/net-mail/sendmail/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/sendmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.7 2002/07/04 04:55:29 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.8 2002/07/12 21:57:42 g2boojum Exp $
+
+*sendmail-8.12.4-r4 (12 Jul 2002)
+
+  12 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  fixed permissions (thanks to Harald Kubota for catching the problem),
+  moved group/passwd stuff to pkg_preinst
 
 *sendmail-8.12.4-r3 (04 Jul 2002)
 
