--- a/app-misc/rox/ChangeLog
+++ b/app-misc/rox/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/rox
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/rox/ChangeLog,v 1.5 2002/07/11 03:10:27 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/rox/ChangeLog,v 1.6 2002/07/13 14:23:14 stroke Exp $
+
+*rox-1.3.2 (13 Jul 2002)
+
+  13 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> rox-1.3.2.ebuild :
+
+  New version, ebuild submitted by Riccardo Persichetti <ricpersi@libero.it>
+  Closes bug #4944 
 
 *rox-1.2.1 (10 Jul 2002)
 
