--- a/app-emulation/zsnes/ChangeLog
+++ b/app-emulation/zsnes/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for app-emulation/zsnes
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/zsnes/ChangeLog,v 1.6 2002/07/08 21:49:09 sunflare Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/zsnes/ChangeLog,v 1.7 2002/07/13 15:00:38 lostlogic Exp $
 
 *zsnes-1.35-r1 (08 Jul 2002)
+
+  11 Jul 2002; Brandon Low <lostlogic@gentoo.org> zsnes-1.35-r1.ebuild :
+
+  Just fix the ebuild to die if patching fails.
 
   08 Jul 2002; Phil Bordelon <sunflare@gentoo.org> zsnes-1.35-r1.ebuild zsnes-1.337-r2.ebuild :
 
