--- a/x11-libs/libPropList/ChangeLog
+++ b/x11-libs/libPropList/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libPropList
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libPropList/ChangeLog,v 1.1 2002/02/01 21:53:38 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libPropList/ChangeLog,v 1.2 2002/07/13 15:11:22 raker Exp $
+
+*libPropList-0.10.1-r3 (13 Jul 2002)
+
+  13 Jul 2002; Nick Hadaway <raker@gentoo.org> libPropList-0.10.1-r3:
+
+  Updated SRC_URI and configure options.
 
 *libPropList-0.10.1-r2 (1 Feb 2002)
 
