--- a/media-sound/zinf/ChangeLog
+++ b/media-sound/zinf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/zinf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/zinf/ChangeLog,v 1.1 2002/07/10 20:25:32 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/zinf/ChangeLog,v 1.2 2002/07/13 15:48:00 danarmak Exp $
+
+  13 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  compile fix for arts
 
 *zinf-2.2.0 (10 Jul 2002)
 
