--- a/net-www/galeon/ChangeLog
+++ b/net-www/galeon/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/galeon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.15 2002/06/09 02:27:01 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.16 2002/07/13 16:42:42 azarah Exp $
+
+  14 Jul 2002; Martin Schlemmer <azarah@gentoo.org> galeon-1.2.5.ebuild :
+  Add an check for Mozilla compiled against gtk+-1.2, if not quit with
+  an error message.
+
+  14 Jul 2002; Martin Schlemmer <azarah@gentoo.org> :
+  Add SLOT, FEATURES, and LICENSE entries.
 
 *galeon-1.2.5.ebuild (08 Jun 2002)
   08 Jun 2002; Ryan Phillips <rphillips@gentoo.org> :
