--- a/virtual/ruby-threads/ChangeLog
+++ b/virtual/ruby-threads/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/ruby-threads
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-threads/ChangeLog,v 1.18 2012/10/28 13:44:49 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-threads/ChangeLog,v 1.19 2012/10/28 19:30:44 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-0.ebuild,
+  ruby-threads-1.ebuild:
+  alpha stable
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-1.ebuild:
   Add ~alpha
