--- a/net-p2p/bitcoin-qt/ChangeLog
+++ b/net-p2p/bitcoin-qt/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for net-p2p/bitcoin-qt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/ChangeLog,v 1.43 2012/10/21 00:06:15 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/ChangeLog,v 1.44 2012/10/29 01:58:37 blueness Exp $
+
+*bitcoin-qt-0.5.7_rc4 (29 Oct 2012)
+*bitcoin-qt-0.6.4_rc4 (29 Oct 2012)
+*bitcoin-qt-0.7.1 (29 Oct 2012)
+*bitcoin-qt-0.6.0.10_rc4 (29 Oct 2012)
+
+  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +bitcoin-qt-0.5.7_rc4.ebuild, +bitcoin-qt-0.6.0.10_rc4.ebuild,
+  +bitcoin-qt-0.6.4_rc4.ebuild, +bitcoin-qt-0.7.1.ebuild:
+  Version bumps, bug #435216
 
   21 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bitcoin-qt-0.6.3.ebuild:
   stable arm, bug #429188
