--- a/net-firewall/conntrack-tools/ChangeLog
+++ b/net-firewall/conntrack-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/conntrack-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.51 2012/09/11 16:20:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.52 2012/10/29 09:45:11 pinkbyte Exp $
+
+*conntrack-tools-1.4.0 (29 Oct 2012)
+
+  29 Oct 2012; Sergey Popov <pinkbyte@gentoo.org>
+  +conntrack-tools-1.4.0.ebuild:
+  Version bump
 
   11 Sep 2012; Raúl Porcel <armin76@gentoo.org> conntrack-tools-0.9.14.ebuild,
   conntrack-tools-1.0.0.ebuild, conntrack-tools-1.0.1.ebuild:
