--- a/dev-python/ipython/ChangeLog
+++ b/dev-python/ipython/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/ipython
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.100 2012/10/29 09:52:13 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.101 2012/10/29 10:21:53 patrick Exp $
+
+  29 Oct 2012; Patrick Lauer <patrick@gentoo.org> ipython-0.13.1.ebuild:
+  Reverting fix that doesn't fix
 
   29 Oct 2012; Patrick Lauer <patrick@gentoo.org> ipython-0.13.1.ebuild:
   Fixing useflag madness
