--- a/net-libs/libisds/ChangeLog
+++ b/net-libs/libisds/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libisds
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.11 2012/05/05 02:54:26 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.12 2012/10/29 10:54:48 scarabeus Exp $
+
+*libisds-0.6 (29 Oct 2012)
+
+  29 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libisds-0.6.ebuild,
+  -libisds-0.5.ebuild, libisds-9999.ebuild:
+  Version bump to latest. Punt older.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> libisds-0.5.ebuild,
   libisds-9999.ebuild:
@@ -51,4 +57,3 @@
   29 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org>
   +libisds-0.3.1.ebuild, +libisds-9999.ebuild, +metadata.xml:
   Add client interface to czech "datove schranky" soap service.
-
