--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.451 2012/10/29 11:24:41 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.452 2012/10/29 11:26:44 mgorny Exp $
+
+  29 Oct 2012; Michał Górny <mgorny@gentoo.org> package.use.force:
+  Remove traces of pypy1.7, no longer in the tree and not supported by the
+  eclasses.
 
   29 Oct 2012; Michał Górny <mgorny@gentoo.org> package.use.force:
   Enable python3.3 for python-exec.
