--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.481 2012/10/29 09:54:50 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.482 2012/10/29 11:27:30 mgorny Exp $
+
+  29 Oct 2012; Michał Górny <mgorny@gentoo.org> python-r1.eclass:
+  Enable python3.3 support.
 
   29 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
   Remove redundant "cd ${BUILD_DIR}" calls.
